[gd_scene load_steps=11 format=3 uid="uid://cljpswer0cwv5"]

[ext_resource type="Script" uid="uid://2fgf3dnuggjw" path="res://scenes/main scenes/Tutorial/TutorialForge2/tutorial_forge_2.gd" id="1_767oq"]
[ext_resource type="Shader" uid="uid://tvpfvluk8hvf" path="res://scenes/Menu/fracture_background.gdshader" id="2_83fv3"]
[ext_resource type="Texture2D" uid="uid://ccwuigx8bnpsp" path="res://assets/background/Fratura_central.jpg" id="3_4rasy"]
[ext_resource type="PackedScene" uid="uid://se8i2us8xx1p" path="res://scenes/main scenes/Match/pause_button.tscn" id="4_m2b5w"]
[ext_resource type="Script" uid="uid://bldjsxufh4kax" path="res://scenes/main scenes/Tutorial/TutorialForge2/player_hand_forge2.gd" id="5_767oq"]
[ext_resource type="PackedScene" uid="uid://dapf7tew78ua2" path="res://scenes/Cards/card_manager.tscn" id="8_tswte"]
[ext_resource type="StyleBox" uid="uid://b1glg7x2bravg" path="res://assets/Themes/textBox.tres" id="9_plp25"]
[ext_resource type="Script" uid="uid://2f4fi75scxes" path="res://addons/richtext2/richer_text_label.gd" id="10_sa3a0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wplbv"]
shader = ExtResource("2_83fv3")
shader_parameter/speed = 1.0
shader_parameter/intensity = 1.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83fv3"]

[node name="TutorialForge2" type="Node2D"]
script = ExtResource("1_767oq")

[node name="Fundo" type="Sprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_wplbv")
position = Vector2(960, 540)
scale = Vector2(1.388, 1.388)
texture = ExtResource("3_4rasy")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 1090)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.501961)

[node name="ContinueButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1741.0
offset_top = 987.0
offset_right = 1870.0
offset_bottom = 1030.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Continuar"

[node name="PauseButton" parent="." instance=ExtResource("4_m2b5w")]
z_index = -1

[node name="ReturnButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 987.0
offset_right = 179.0
offset_bottom = 1030.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Voltar"

[node name="PlayerHandForge2" type="Node2D" parent="."]
position = Vector2(960, 1080)
script = ExtResource("5_767oq")

[node name="Area2D" type="Area2D" parent="PlayerHandForge2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHandForge2/Area2D"]
shape = SubResource("RectangleShape2D_83fv3")

[node name="CardManager" parent="." instance=ExtResource("8_tswte")]

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(0, 540)

[node name="TextBox" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(0, 294)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 324.0
offset_top = 175.0
offset_right = 1600.0
offset_bottom = 357.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_styles/normal = ExtResource("9_plp25")
bbcode_enabled = true
fit_content = true
script = ExtResource("10_sa3a0")
bbcode = "[fill]Para melhorar suas cartas ainda é possível fazer uma ação especial, o forjar 2. Ela se resume em juntar uma carta de valor 2 com um outro 2, um 5 ou um 8. Como resultado será gerada uma carta com valor somado e de cor igual a cor da maior carta, ou seja, juntar um 2 OURO com um 8 SAFIRA irá gerar um 10 SAFIRA. Em caso de juntar 2 com outro 2 a cor será determinada pela primeira carta escolhida. Para realizar essa ação clique com o botao direito em duas cartas e forje suas primeiras cartas! Forje duas cartas novas para continuar. [/fill]"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 30
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = false
autostyle_numbers_tag = "%s"
autostyle_numbers_pad_decimals = false
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
image_path = "res://"
image_resize_to_font_size = true
image_scale = 1.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
metadata/_custom_type_script = "uid://2f4fi75scxes"

[node name="TextBox2" type="RichTextLabel" parent="."]
clip_contents = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1553.0
offset_top = 658.0
offset_right = 1895.0
offset_bottom = 879.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_styles/normal = ExtResource("9_plp25")
bbcode_enabled = true
fit_content = true
script = ExtResource("10_sa3a0")
bbcode = "[fill][/fill]"
effects = 2
alignment = 1
color = Color(1, 1, 1, 1)
emoji_scale = 1.0
font = ""
font_auto_setup = true
font_size = 30
font_bold_weight = 1.5
font_italics_slant = 0.25
font_italics_weight = -0.25
shadow_enabled = false
shadow_offset = 0.08
shadow_alpha = 0.25
shadow_outline_size = 0.1
outline_size = 0
outline_mode = 1
outline_adjust = 0.8
outline_hue_adjust = 0.0125
nicer_quotes_enabled = true
nicer_quotes_format = "“%s”"
markdown_enabled = true
markdown_format_bold = "[b]%s[]"
markdown_format_italics = "[i]%s[]"
markdown_format_bold_italics = "[bi]%s[]"
markdown_format_highlight = "[green;sin]%s[]"
markdown_format_bold2 = "[b]*%s*[]"
markdown_format_italics2 = "[i;gray]*%s*[]"
markdown_format_bold_italics2 = "%s"
context_enabled = true
context_path = NodePath("/root/State")
context_state = {}
context_rich_objects = true
context_rich_ints = true
context_rich_array = true
autostyle_numbers = false
autostyle_numbers_tag = "%s"
autostyle_numbers_pad_decimals = false
autostyle_numbers_decimals = 2
autostyle_emojis = true
effect_weight = 0.0
image_path = "res://"
image_resize_to_font_size = true
image_scale = 1.0
meta_auto_https = true
meta_cursor = 2
override_bbcodeEnabled = true
override_clipContents = false
override_fitContent = true
metadata/_custom_type_script = "uid://2f4fi75scxes"

[connection signal="button_up" from="ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="ReturnButton" to="." method="_on_return_button_button_up"]
